crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__parallel_config_default_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
expression: config
---
enabled: false
max_concurrent: 4
per_package_timeout: 1800000
