crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__parallel_config_enabled_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
expression: config
---
enabled: true
max_concurrent: 8
per_package_timeout: 600000
