crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__publish_event_package_flow_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
assertion_line: 4073
expression: events
---
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_started
    name: my-crate
    version: 1.0.0
  package: my-crate@1.0.0
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_attempted
    attempt: 1
    command: cargo publish -p my-crate
    max_attempts: 1
  package: my-crate@1.0.0
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_output
    stdout_tail: Uploading my-crate v1.0.0
    stderr_tail: ""
  package: my-crate@1.0.0
- timestamp: "2025-01-15T12:00:00Z"
  event_type:
    type: package_published
    duration_ms: 4500
  package: my-crate@1.0.0
